# lli-rs-go

./: README.md  go.mod  lli.go  lli_test.go
.github/workflows/: go.yml
lli/: Cargo.toml
lli/src/: lib.rs
